Debugged nicely aligned Validated html and css Corrected favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,30 @@
+/* Validated with:
+https://jigsaw.w3.org/css-validator 
+- Not checked the static vars and dynamic import.
+VSCode plugin: CSSTree Validator 
+*/
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-/* Validated with https://jigsaw.w3.org/css-validator and the VSCode plugin: CSSTree Validator */
 
 /* variables */
 :root {
-	--min_width: 860px;
+	--min_width: 660px;
 	--out_of_sight: -9999px;
-	--board_width: 420px;
+	--board_width: 320px;
 	--std_padding: 5px;
-	--board_width_with_padding: 430px;
-	--cell_width: 40px;
-	--sidebar_width: 150px;
+	--board_width_with_padding: 330px;
+	--cell_width: 30px;
+	--sidebar_width: 100px;
+	--sidebar_offset: -20px;
+	--tooltip_padding: 5px;
+	--border-radius: 5px;
+
 	--gray: #ddd;
 	--blackish: #222222;
 	--lightblack: #222222;
 	--deepblue: #25567B;
 	--buttonblue: #99C2E1;
 	--button_shade: #66A3D2;
-	--orange_shade0: #FFA635;
+	--orange_shade0: #FF7605;
 	--orange_shade1: #FFB655;
 	--orange_shade2: #FFCE8E;
 }
@@ -28,10 +36,6 @@ body {
 	margin: 0pt;
 	background-color: var(--gray);
 	min-width: var(--min_width);
-}
-
-/* ul {
-	padding-inline-start: 0; /* JFD: remove default padding from user agent */
 }
 
 */ h1,
@@ -56,18 +60,29 @@ a {
 	width: auto;
 	display: inline-block;
 	text-align: left;
-	margin: 0 auto 1em auto;
+	margin: 0 auto 0 auto;
+}
+
+#help_text {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.flex_column {
+	display: flex;
+	flex-direction: column;
 }
 
 button {
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	/* font-family: 'Open Sans', Helvetica, Arial, sans-serif; */
 	font-size: 1.2em;
 	color: lightgray;
 	background-color: var(--deepblue);
 	border: none;
 	margin: 1em auto 0 auto;
-	padding: 10px;
-	border-radius: 5px;
+	padding: var(--std_padding);
+	border-radius: var(--border-radius);
 }
 
 div {
@@ -125,15 +140,10 @@ button:active {
 	background-position: var(--out_of_sight) var(--out_of_sight);
 }
 
-.tagline {
+.tagline, h1, h2 {
 	margin-bottom: 0em;
-}
-.title {
-	margin-bottom: 0em;
-}
-
-.help {
-	display: none;
+	margin-block-start: 0.0em;
+	margin-block-end: 0.0em;
 }
 
 .container {
@@ -150,22 +160,20 @@ button:active {
 #stats-sidebar,
 #restart-sidebar {
 	width: var(--sidebar_width);
-	padding: 20px;
+	padding: var(--std_padding);	
 	margin: 0;
 	background-color: #EEEEEE;
 	position: absolute;
-	top: 4.5em;
+	top: 1em;
 	border-radius: 5px;
 }
 
-/* JFD: sidebars moved to the left of game-container*/
 #roster-sidebar,
 #restart-sidebar {
-	left: -200px;
+	left: var(--sidebar_offset);
 }
-
 #stats-sidebar {
-	right: -200px;
+	right: var(--sidebar_offset);
 }
 
 #roster-sidebar h2,
@@ -228,8 +236,8 @@ button {
 	display: none;
 	background-color: var(--white);
 	color: var(--orange_shade0);
-	padding: 5px;
-	border-radius: 5px;
+	padding: var(--tooltip_padding);
+	border-radius: var(--tooltip_border-radius);
 }
 
 /* JFD: board */
@@ -248,12 +256,6 @@ button {
 	border-radius: 5px;
 }
 
-/* JFD: grid div
-.grid-container:last-child {
-	margin-left: 10px;
-	/* border: #F60018; 
-}
-*/
 
 /* JFD: will be removed by JS */
 .no-js {
@@ -322,34 +324,3 @@ button {
 	background-color: #222222;
 }
 
-/* Unicode Character “↓” (U+2193) 
-a big bouncing orange arrow above current element*/
-.highlight:before {
-	content: "\2193";
-	font-weight: bold;
-	font-size: 75px;
-	color: orange;
-	text-shadow: 0 0 5px orange;
-	position: absolute;
-	width: 100px;
-	height: 100px;
-	top: -100px;
-	left: 50%;
-	margin-left: -50px;
-	/* JFD: see below keyframes for animation */
-	animation: highlight 1.5s infinite;
-}
-
-.current-step {
-	font-weight: bold;
-}
-
-/* @media(max-width: 1300px) {
-	.container {
-		width: 440px; /* JFD: ensures only 1 board across.
-	}
-
-	.grid-container:last-child {
-		margin-left: 0;
-	}
-} */
